// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CartCount /> can update via props 1`] = `
<CartCount__AnimationStyles>
  <TransitionGroup
    childFactory={[Function]}
    component="div"
  >
    <CSSTransition
      className="count"
      classNames="count"
      key="1"
      timeout={
        Object {
          "enter": 300,
          "exit": 300,
        }
      }
      unmountOnExit={true}
    >
      <CartCount__Dot>
        1
      </CartCount__Dot>
    </CSSTransition>
  </TransitionGroup>
</CartCount__AnimationStyles>
`;

exports[`<CartCount /> can update via props 2`] = `
<CartCount__AnimationStyles>
  <TransitionGroup
    childFactory={[Function]}
    component="div"
  >
    <CSSTransition
      className="count"
      classNames="count"
      key="2"
      timeout={
        Object {
          "enter": 300,
          "exit": 300,
        }
      }
      unmountOnExit={true}
    >
      <CartCount__Dot>
        2
      </CartCount__Dot>
    </CSSTransition>
  </TransitionGroup>
</CartCount__AnimationStyles>
`;

exports[`<CartCount /> matches the snapshot 1`] = `
<CartCount__AnimationStyles>
  <TransitionGroup
    childFactory={[Function]}
    component="div"
  >
    <CSSTransition
      className="count"
      classNames="count"
      key="5"
      timeout={
        Object {
          "enter": 300,
          "exit": 300,
        }
      }
      unmountOnExit={true}
    >
      <CartCount__Dot>
        5
      </CartCount__Dot>
    </CSSTransition>
  </TransitionGroup>
</CartCount__AnimationStyles>
`;
